# Langchain

./: Pipfile  README.md  ingestion.py  main.py  mediumblog1.txt  pyproject.toml  textsplitters.md
backend/: core.py
chroma_db/84b87152-17d5-4979-b6cf-97e50a4fcce2/: index_metadata.pickle
